papi borre cosas porque hay que hacer buenas praticas

--- a/index.html
+++ b/index.html
@@ -7,17 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Pugs web</title>
 </head>
-
-<body background="images/fondo.jpg">
-
-    <div>
+<body>
         <header>
-            <center>
                 <h1 id="inicio">Pugs web</h1>
-            </center>
         </header>
-    </div>
-
     <div>
         <nav>
             <ul>
