cambios a los header ._.

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="CSS/style.css">
     <title>Pugs web</title>
 </head>
 <body>
-        <header>
+        <header class="header">
                 <h1 id="inicio">Pugs web</h1>
         </header>
     <div>
@@ -216,11 +217,7 @@
     </div>
 
     <footer>
-        <center>
-            <a href=#inicio>
-                <p><strong>Volver al inicio</strong></p>
-            </a>
-        </center>
+            <a href=#inicio>volver al inicio</a>
     </footer>
 </body>
 </html>
